k8s-deploy/k8sdemo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sdemo-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8sdemo-back
  template:
    metadata:
      labels:
        app: k8sdemo-back
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: k8sdemo-back
        image: k8sdemoacrintelcom.azurecr.io/k8s-demo:v2
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: k8sdemo-back
