k8s-deploy/k8sdemo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdemo-back-svc
spec:
  selector:
    app: k8sdemo-back
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
